Tripleta artimética terminada.

--- a/src/Codext/Codext/Codext.csproj
+++ b/src/Codext/Codext/Codext.csproj
@@ -53,6 +53,7 @@
       <DependentUpon>Compilador.cs</DependentUpon>
     </Compile>
     <Compile Include="Database.cs" />
+    <Compile Include="DelegadoInstruccion.cs" />
     <Compile Include="Instrucción.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
